[package]
name = "test-write-fb"
version = "0.1.0"
edition = "2021"
description = "test write framebuffer"
authors = [ "longjin <longjin@DragonOS.org>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
jpeg-encoder = "0.6.0"
